# kadai2

./: CMakeLists.txt  README.md  package.xml
scripts/: count.py  twice.py
